--- a/src/MainLayout.module.css
+++ b/src/MainLayout.module.css
@@ -54,9 +54,9 @@
     * Image: h-20, w-40 (80px x 160px)
     * The styles below make the image fit inside the container.
     */
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+  height: 200%;
+  width: 200%;
+  object-fit: fill;
 }
 
 .logoTextContainer {
